# sorrel

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CPC_FOR_IQN_IMPLEMENTATION_PLAN.md  PLAN_ADD_ACTION_TO_LSTM.md  README.md  SINGLE_TO_MULTIDISCRETE_PPO_CONVERSION.md  benchmark_cooking.py  benchmark_iowa.py  benchmark_modes.py  benchmark_results.txt  benchmark_treasurehunt.py  cleanup_output.txt  conftest.py  debug_probe_test.py  implementation.txt  mps_report.md  pyproject.toml  simultaneous_rules.md  smoke_test_games.py  sorrel.py  sorrel_test.py  test_all_modes.py  test_async_training.py  test_mps_performance.py  test_predefined_schedule.py  test_simultaneous_logic.py  verify_all_games.py
.claude/agents/: python-code-reviewer.md
.github/workflows/: pytest.yml
agentarium/: buffers.py  layers.py  utils.py  visual_field.py
agentarium/models/: PPO.py  PPO_lstm.py  PPO_mb.py  ann.py  dqn.py  human_player.py  iqn.py
configs/records_test/: fixed_punishment_rate_0.0_oneAs_size16_gem_has_value_config_backup.yaml
docs/plans/: entity_contextual_observation_plan.md  multi_agent_kind_implementation_plan.md  multi_map_probe_test_implementation_plan.md  sprite_tinting_implementation_plan.md  wounded_stag_implementation_plan.md
docs/source/: conf.py  index.md
examples/RPG/: agents.py  config.yaml  dualing_cnn_lstm_dqn.py  entities.py  env.py  main.py  utils.py
examples/RPG3/: agents.py  config.yaml  entities.py  env.py  iRainbow_clean.py  main.py  utils.py
examples/RPG3_jax/: DDQN_jax.py  env.py  iRainbow_clean.py  main.py  main_DDQN.py  main_PPO.py  main_iRainbow.py  main_nsDDQN.py  main_predict.py  nsDDQN_jax.py
examples/ai_econ/: agents.py  entities.py  env.py  main.py  utils.py
examples/coordination_and_predictability/: agents.py  agents_old.py  config.py  entities.py  env.py  main_beta_marl.py  main_beta_marl_SB_task.py  main_beta_marl_SB_task_full.py  main_beta_marl_SB_task_sanity_check.py  main_beta_marl_SB_task_sanity_check_identical.py  main_beta_marl_SB_task_sanity_check_iqn.py  main_beta_marl_study2.py  main_beta_marl_study2_iqn.py  main_beta_marl_study2_with_lstm.py  partner_selection_env.py  plan.ipynb  prototype.py  prototype_inequity.py  task_models.py  utils.py
examples/leakyemotions/: agents.py  custom_observation_spec.py  entities.py  env.py  main.py
examples/partner_selection/: agents.py  env.py  main_beta copy.py  main_beta.py  main_beta_marl.py  main_beta_marl_SB_task.py  main_beta_marl_SB_task_full.py  main_beta_marl_SB_task_test_match_over_pref.py  main_beta_marl_study2.py  main_beta_marl_study2_iqn.py  main_beta_multiagent.py  partner_selection_env.py  utils.py
examples/partner_selection_policy_predictability/: agents.py  config.py  env.py  (+15 more)
scripts/: run_multiple_experiments.sh
simple_foraging_3agents_punish0.2_3agents/: events.out.tfevents.1758572010.LAPTOP-VCFEM3H5.32036.0  events.out.tfevents.1758572237.LAPTOP-VCFEM3H5.14024.0  events.out.tfevents.1758573074.LAPTOP-VCFEM3H5.15236.0  events.out.tfevents.1758573148.LAPTOP-VCFEM3H5.25244.0
sorrel/: NN_structure.txt  buffers.py  cli.py  code_chunking.py  environment.py  location.py  prompt.md  queries.py
(+1382 files in other folders)
