[tool.poetry]
name = "gem"
version = "0.0.0"  # placeholder for the real version, which is retrieved from git tags
description = "A flexible framework for developing reinforcement learning algorithms."
authors = ["Shon Verch <shon.verch@mail.utoronto.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
astropy = "^5.1.1"
matplotlib = "^3.6.1"
numpy = "^1.23.4"
torch = {extras = ["cpu"], version = "^2.0.1+cpu"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"