[project]
readme = "README.md"
name = "sorrel"
version = "1.4.0"
description = "A flexible framework for developing reinforcement learning algorithms."
license = "MIT"
maintainers = [
    {name = "Yibing Ju", email = "bing.ju@mail.utoronto.ca"}, 
    {name = "Rebekah Gelpi", email = "rebekah.gelpi@mail.utoronto.ca"},
]
contributors = [
    {name = "Ethan Jackson", email = "jackson.ethan.c@gmail.com"},
    {name = "Shon Verch", email = "verchshon@gmail.com"},
    {name = "Yikai Tang", email = "yikai.tang@mail.utoronto.ca"},
    {name = "Claas Voelcker", email = "claas@voelcker.net"},
    {name = "Wil Cunningham"}
]

[project.urls]
Homepage = "https://github.com/social-ai-uoft/sorrel"
Documentation = "https://sorrel.readthedocs.io"
Paper = "https://doi.org/10.48550/arXiv.2506.00228"

[tool.poetry]
packages = [{ include = "sorrel" }]

[tool.poetry.scripts]
sorrel = "sorrel.cli:main"

[tool.poetry.dependencies]
python = "^3.12.0"
matplotlib = "^3.6.1"
numpy = "^2.5.0"
pyyaml = "^6.0.2"
pytest = "^9.0.3"

torch = "^2.10.0"
jax = "^0.10.0"
flax = "^0.12.0"

# used for configs
hydra-core = "^1.3.0"

# used in buffer.py
dill = "^0.3.9"
# used in human_player.py
ipython = "^8.29.0"
# used in utils.py
pillow = "^12.2.0"
# used in logging.py
tensorboard = "^2.21.0"
einops = "^0.8.1"
# security pin (transitive via tensorboard); CVE-2026-0994. Capped <7 to avoid major-version bump.
protobuf = ">=6.33.5,<7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"

# for docs
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
myst-nb = "^1.1.2"
sphinx-autodoc2 = "^0.5.0"
sphinxcontrib-autoprogram = "^0.1.8"

# security pins (transitive via Sphinx, myst-nb, pre-commit) per Dependabot
urllib3 = "^2.7.0"
requests = "^2.33.0"
tornado = "^6.5.5"
virtualenv = "^20.36.1"

[tool.poetry.group.llm]
optional = true

[tool.poetry.group.llm.dependencies]
openai = "^1.102.0"
anthropic = ">=0.40.0"

[tool.pytest.ini_options]
pythonpath = [
  "sorrel"
]
addopts = [
  "--doctest-modules", 
  "--import-mode=importlib"
]

[tool.pyright]
venvPath = "."  # look for the venv at ./venv
venv = "venv"
reportPrivateImportUsage = "none"  # torch C-ext re-exports, just noise

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
